// Embedded C internal options.
//@max_repeated_length=5
//@max_string_length=16
//@max_bytes_length=16

message SubMessage {
    required string substuff1 = 1;
    required int32 substuff2 = 2;
    required fixed32 substuff3 = 3;
}

enum MyEnum {
    Zero = 0;
    First = 1;
    Second = 2;
    Truth = 42;
}

message AllTypes {
    required int32      req_int32   = 1;
    required int64      req_int64   = 2;
    required uint32     req_uint32  = 3;
    required uint64     req_uint64  = 4;
    required sint32     req_sint32  = 5;
    required sint64     req_sint64  = 6;
    required bool       req_bool    = 7;
    
    required fixed32    req_fixed32 = 8;
    required sfixed32   req_sfixed32= 9;
    required float      req_float   = 10;
    
    required fixed64    req_fixed64 = 11;
    required sfixed64   req_sfixed64= 12;
    required double     req_double  = 13;
    
    required string     req_string  = 14;
    required bytes      req_bytes   = 15;
    required SubMessage req_submsg  = 16;
    required MyEnum     req_enum    = 17;
    
    
    repeated int32      rep_int32   = 21;
    repeated int64      rep_int64   = 22;
    repeated uint32     rep_uint32  = 23;
    repeated uint64     rep_uint64  = 24;
    repeated sint32     rep_sint32  = 25;
    repeated sint64     rep_sint64  = 26;
    repeated bool       rep_bool    = 27;
    
    repeated fixed32    rep_fixed32 = 28;
    repeated sfixed32   rep_sfixed32= 29;
    repeated float      rep_float   = 30;
    
    repeated fixed64    rep_fixed64 = 31;
    repeated sfixed64   rep_sfixed64= 32;
    repeated double     rep_double  = 33;
    
    repeated string     rep_string  = 34;
    repeated bytes      rep_bytes   = 35;
    repeated SubMessage rep_submsg  = 36;
    repeated MyEnum     rep_enum    = 37;
    
    required int32      opt_int32   = 41;
    required int64      opt_int64   = 42;
    required uint32     opt_uint32  = 43;
    required uint64     opt_uint64  = 44;
    required sint32     opt_sint32  = 45;
    required sint64     opt_sint64  = 46;
    required bool       opt_bool    = 47;
    
    required fixed32    opt_fixed32 = 48;
    required sfixed32   opt_sfixed32= 49;
    required float      opt_float   = 50;
    
    required fixed64    opt_fixed64 = 51;
    required sfixed64   opt_sfixed64= 52;
    required double     opt_double  = 53;
    
    required string     opt_string  = 54;
    required bytes      opt_bytes   = 55;
    required SubMessage opt_submsg  = 56;
    required MyEnum     opt_enum    = 57;

    // Just to make sure that the size of the fields has been calculated
    // properly, i.e. otherwise a bug in last field might not be detected.
    required int32      end = 99;
}

message TestResults
{
    required bool success = 1;
    required uint32 stack_usage = 2;
    required uint32 heap_usage = 3;
}

